# HW5-NW

./: main.py  pyproject.toml
.github/workflows/: test.yml
align/: __init__.py  align.py
test/: test_align.py
