[build-system]
requires = [
	"flit_core >=3.2,<4",
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "mst"
authors = [{name = "Noah Baker, ChatGPT", email = "noah.baker@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires="python_version >= '3.7'"
dependencies = [
    "pytest",
]


[project.urls]
Home = "https://github.com/noahrbaker/HW5-NW"